--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "type": "module",
   "dependencies": {
+    "aws-sdk": "^2.1407.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "query-string": "^8.1.0"
