--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY_ID = "AKIARW6I2FJD7BU7JBIE"
-AWS_SECRET_ACCESS_KEY = "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"
+AWS_ACCESS_KEY_ID = ""
+AWS_SECRET_ACCESS_KEY = ""
